# fastapi-sample-exmaple

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
fast_api_example/: .env.dev  .env.local  env_loader.py  main.py  meta_singleton.py
fast_api_example/account/model/: account.py
fast_api_example/account/repository/: account_repository.py  redis_repository.py
fast_api_example/account/router/: account_router.py
fast_api_example/account/service/: account_service.py
fast_api_example/const/: const_set.py
fast_api_example/dto/: account_dto.py
fast_api_example/lib/: async_requests.py  context.py  exception_handler.py  exception_result.py  json.py  middleware.py  object.py
fast_api_example/persistence/: database.py  mysql.py  redis.py  standalone_session.py  transactional.py
tests/: conftest.py
