[tool.poetry]
name = "fast-api-example"
version = "0.1.0"
description = ""
authors = ["tjwjdgks <tjwjdgks43@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_example"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.101.0"}
prometheus-fastapi-instrumentator = "^6.1.0"
requests = "^2.31.0"
aioredis = "^2.0.1"
aiohttp = "^3.8.5"
pytz = "^2023.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
aiomysql = "^0.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"
black = "^23.7.0"
flake8 = "^6.1.0"
pre-commit = "^3.3.3"
mypy = "^1.4.1"
types-pytz = "^2023.3.0.0"
types-requests = "^2.31.0.2"

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
